--- a/src/app/components/game-form/game-form.component.html
+++ b/src/app/components/game-form/game-form.component.html
@@ -69,19 +69,14 @@
       </div>
       <br>
       <br>
-      <div class="reunion-links">
-        <h2>Reuniones para Hoy</h2>
-        <ul *ngIf="links.length > 0; else noLinks">
-          <li *ngFor="let link of links">
-            <strong>{{ link.nombreActividad }}</strong>: 
-            <a [href]="link.enlace" target="_blank">{{ link.enlace }}</a>
-          </li>
-        </ul>
-      
-        <ng-template #noLinks>
-          <p>No hay reuniones programadas para hoy.</p>
-        </ng-template>
+      <div *ngIf="enlaceReunion; else noActividad">
+        <p><strong> Enlace para la reunión de hoy:</strong></p>
+        <a [href]="enlaceReunion" target="_blank">{{ enlaceReunion }}</a>
       </div>
+      <ng-template #noActividad>
+        <p>No tienes reuniones programadas para hoy.</p>
+      </ng-template>
+      
       
 
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
