api redes sociales

--- a/src/app/components/game-list/game-list.component.html
+++ b/src/app/components/game-list/game-list.component.html
@@ -29,11 +29,13 @@
                         <img src="https://www.acrolinx.com/wp-content/uploads/2020/04/Better-Content-Faster.png"
                         alt="Imagen inicio" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
 
-
-
                       </figure>
                   </div>
               </div>
+              <h1>Ya probraste actiPro? dejanos un comentario en X!</h1>
+              <button class="btn btn-primary" type="button" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;" routerLink="/twiter">
+                Postea sobre nosotros!
+              </button>
           </div>
       </div>
   </div>
